2A/05_Projet_GL/src/test/deca/context/valid/complet/50_casting_vers_Object.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}

{
    
    (Object)(new A());
}