2A/05_Projet_GL/src/test/deca/context/invalid/complet/16_type_retour_indef_asm.deca
// Description :
//     type de retour indefine pour MethodAsmBody 
// Resultats :
//    ligne 11 : identificateur de type non déclaré 
// Historique :
//  cree le 16/01/2024



class A{
    B get() asm (
        "bonjour"
    );
}

